--- a/src/entrypoints/popup/index.html
+++ b/src/entrypoints/popup/index.html
@@ -42,7 +42,7 @@
     <!-- Welcome screen -->
     <div class="screen" id="intro">
       <h4>
-        By using this extension, you understand the
+        <b>This is less safe than the phone app</b>. By using this extension, you understand the
         <a href="https://github.com/FreshSupaSulley/Auto-2FA/blob/main/README.md#security" target="_blank">risks</a>, including unauthorized access or data
         loss. The developers are not liable for any consequences.
       </h4>
